// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for build tool gradle 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              Object {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom"
        >
          <PipeCommandGradle />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig
        </p>
        <p
          className="huge-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
        <hr
          className="no-horizontal-margins"
        />
        <div>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done
               
            </strong>
             
            <FormattedMessage
              defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.done.description"
              id="onboarding.tutorial.with.gitlab_ci.yml.done.description"
              values={
                Object {
                  "link": "onboarding.tutorial.with.gitlab_ci.yml.done.description.link",
                }
              }
            />
          </p>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done.then-what
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.then-what.description
          </p>
          <p
            className="big-spacer-bottom"
          >
            <FormattedMessage
              defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              id="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              values={
                Object {
                  "links": <Link
                    onlyActiveOnIndex={false}
                    rel="noopener noreferrer"
                    style={Object {}}
                    target="_blank"
                    to="/documentation/user-guide/quality-gates/"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.done.links.QG
                  </Link>,
                }
              }
            />
          </p>
        </div>
      </React.Fragment>
    </div>
  </div>
</div>
`;

exports[`should render correctly for build tool maven 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              Object {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom"
        >
          <PipeCommandMaven />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig
        </p>
        <p
          className="huge-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
        <hr
          className="no-horizontal-margins"
        />
        <div>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done
               
            </strong>
             
            <FormattedMessage
              defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.done.description"
              id="onboarding.tutorial.with.gitlab_ci.yml.done.description"
              values={
                Object {
                  "link": "onboarding.tutorial.with.gitlab_ci.yml.done.description.link",
                }
              }
            />
          </p>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done.then-what
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.then-what.description
          </p>
          <p
            className="big-spacer-bottom"
          >
            <FormattedMessage
              defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              id="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              values={
                Object {
                  "links": <Link
                    onlyActiveOnIndex={false}
                    rel="noopener noreferrer"
                    style={Object {}}
                    target="_blank"
                    to="/documentation/user-guide/quality-gates/"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.done.links.QG
                  </Link>,
                }
              }
            />
          </p>
        </div>
      </React.Fragment>
    </div>
  </div>
</div>
`;

exports[`should render correctly for build tool other 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              Object {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom"
        >
          <PipeCommandOther />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig
        </p>
        <p
          className="huge-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
        <hr
          className="no-horizontal-margins"
        />
        <div>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done
               
            </strong>
             
            <FormattedMessage
              defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.done.description"
              id="onboarding.tutorial.with.gitlab_ci.yml.done.description"
              values={
                Object {
                  "link": "onboarding.tutorial.with.gitlab_ci.yml.done.description.link",
                }
              }
            />
          </p>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done.then-what
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.then-what.description
          </p>
          <p
            className="big-spacer-bottom"
          >
            <FormattedMessage
              defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              id="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              values={
                Object {
                  "links": <Link
                    onlyActiveOnIndex={false}
                    rel="noopener noreferrer"
                    style={Object {}}
                    target="_blank"
                    to="/documentation/user-guide/quality-gates/"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.done.links.QG
                  </Link>,
                }
              }
            />
          </p>
        </div>
      </React.Fragment>
    </div>
  </div>
</div>
`;

exports[`should render correctly: Step wrapper 1`] = `
<Step
  finished={false}
  open={true}
  renderForm={[Function]}
  stepNumber={3}
  stepTitle="onboarding.tutorial.with.gitlab_ci.yml.title"
/>
`;

exports[`should render correctly: initial content 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    />
  </div>
</div>
`;
